# pgramma

./: .env.example  .gitignore  Cargo.toml  README.md  README_ZH.md  config.example.toml  config.toml  seed.txt
.cargo/: config.toml
.github/workflows/: check.yml
notebooks/: 00_api_sanity_check.ipynb  01_cognitive_prompt.ipynb  02_memory_decay.ipynb  pyproject.toml
src/: config.rs  error.rs  lib.rs  main.rs  models.rs
src/app/: mod.rs
src/config/: app_config.rs  mod.rs
src/db/: connection.rs  mod.rs  schema.sql
src/domain/: error.rs  mod.rs  models.rs
src/llm/: client.rs  evaluator.rs  inference.rs  mod.rs
src/memory/: embedder.rs  mod.rs  recall.rs
src/memory/lifecycle/: gc_worker.rs  mod.rs  rater.rs
src/persona/: mod.rs
