[package]
name = "pgramma"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.35", features = ["bundled-sqlcipher"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
