[package]
name = "pgramma"
version = "0.1.0"
edition = "2024"

[dependencies]
redb = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
rig-core = "0.32"
schemars = "1"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = "0.5"
tokenizers = "0.22"
toml = "0.9"

[dev-dependencies]
tempfile = "3"
